--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "release:check": "semantic-release --dry-run"
   },
   "dependencies": {
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.27.5",
     "command-exists": "^1.2.9",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
@@ -49,10 +49,11 @@
     "web-resource-inliner": "^5.0.0"
   },
   "devDependencies": {
+    "backslide": "^3.0.0",
     "gh-pages": "^3.1.0",
     "semantic-release": "^17.3.1",
     "semantic-release-npm-github": "^1.0.4",
-    "xo": "^0.37.1"
+    "xo": "^0.45.0"
   },
   "xo": {
     "space": true,
